--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=mini-marketplace
-spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE_NAME>
-spring.datasource.username=<YOUR_USERNAME>
-spring.datasource.password=<YOUR_PASSWORD>
+spring.datasource.url=jdbc:postgresql://pgserver.mau.se:5432/da379a_mini_marketplace
+spring.datasource.username=an4199
+spring.datasource.password=ean3vot7
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
