--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,7 @@
-
+spring.application.name=mini-marketplace
+spring.datasource.url=jdbc:postgresql://pgserver.mau.se:5432/da379a_mini_marketplace
+spring.datasource.username=an5622
+spring.datasource.password=wvw8i7gs
+spring.datasource.hikari.maximum-pool-size=2
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
